--- a/bin/install
+++ b/bin/install
@@ -50,6 +50,12 @@ function sed_replace {
   mv $2.tmp $2
 }
 
+function containsElement () {
+  local e
+  for e in "${@:2}"; do [[ "$e" == "$1" ]] && return 0; done
+  return 1
+}
+
 case "$1" in
   -v|--version)
     version="$2"
@@ -59,9 +65,17 @@ echo "$version" > "$OPENSHIFT_FUSE_DIR/env/OPENSHIFT_FUSE_VERSION"
 #Extract the Fuse Fabric Distribution
 cd $OPENSHIFT_FUSE_DIR
 
-unzip jboss-fuse-full-6.1.0.${BUILD}.zip >& /dev/null
-ln -s jboss-fuse-full-6.1.0.${BUILD} container
-rm -f jboss-fuse-full-6.1.0.${BUILD}.zip
+#unzip jboss-fuse-full-6.1.0.${BUILD}.zip >& /dev/null
+mkdir $OPENSHIFT_FUSE_DIR/container
+cd $OPENSHIFT_FUSE_DIR/usr
+nonshared=("bin" "etc" "data" "deploy" "fabric" "instances" "lib" "quickstarts")
+for i in *; do
+  if containsElement $i ${nonshared[@]}; then
+    cp -r $OPENSHIFT_FUSE_DIR/usr/$i $OPENSHIFT_FUSE_DIR/container/$i
+  else
+    ln -s $OPENSHIFT_FUSE_DIR/usr/$i $OPENSHIFT_FUSE_DIR/container/$i
+  fi
+done
 
 # Make sure the scripts are executable
 chmod a+x $OPENSHIFT_FUSE_DIR/container/bin/*
