--- a/bin/install
+++ b/bin/install
@@ -63,6 +63,9 @@ unzip jboss-fuse-full-6.1.0.${BUILD}.zip >& /dev/null
 ln -s jboss-fuse-full-6.1.0.${BUILD} container
 rm -f jboss-fuse-full-6.1.0.${BUILD}.zip
 
+# Make sure the scripts are executable
+chmod a+x $OPENSHIFT_FUSE_DIR/container/bin/*
+
 # Copy the version specific files into container directory
 cd $OPENSHIFT_FUSE_DIR/versions/$version
 files=$(find . -name \*)
@@ -82,7 +85,7 @@ cd $OPENSHIFT_FUSE_DIR/container/fabric/import/fabric/configs/versions/1.0/profi
 rm -rf controller-jon-server controller-rhq-agent controller-tomcat controller-wildfly openshift-jbossews.1 openshift-jbossews.2 docker
 rm -rf gateway-haproxy gateway-http gateway-mq
 rm -rf hadoop-base hadoop-datanode hadoop-namenode
-rm -rf insight insight-camel insight-core insight-hdfs insight-jetty insight-kibana
+# rm -rf insight insight-camel insight-core insight-hdfs insight-jetty insight-kibana
 rm -rf jboss-brms-controller-tomcat jboss-brms-controller-wildfly jboss-brms-feature-workbench jboss-brms-feature-workbench.openshift
 rm -rf mq-replicated
 rm -rf openshift-aerogear-pushserver
