--- a/bin/install
+++ b/bin/install
@@ -114,6 +114,14 @@ for i in `grep -Rl OPENSHIFT_FUSE_AMQ_PROXY_PORT .` ; do
 done
 
 cd $OPENSHIFT_FUSE_DIR
+
+# Remove some default service configs since we don't need to boot up in full ESB mode.
+rm container/etc/org.apache.aries.transaction.cfg
+rm container/etc/org.apache.servicemix.jbi.cfg
+rm container/etc/org.apache.servicemix.nmr.cfg
+rm container/etc/org.fusesource.mq.fabric.server-default.cfg
+rm container/etc/activemq.xml
+
 # Append shutdown configuration
 echo "" >> container/etc/config.properties
 echo "karaf.shutdown.host=${OPENSHIFT_FUSE_IP}" >> container/etc/config.properties
@@ -183,7 +191,7 @@ cart_props "password=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
 if $join; then
     ${FUSE_BIN_DIR}/start
     wait_for_start    
-    ${FUSE_BIN_DIR}/client -r 3 -d 10 -h ${OPENSHIFT_FUSE_IP} -a ${OPENSHIFT_FUSE_SSH_PORT} -u admin -p ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD} "wait-for-service io.fabric8.boot.commands.service.Join"
+    ${FUSE_BIN_DIR}/client -r 3 -d 10 -h ${OPENSHIFT_FUSE_IP} -a ${OPENSHIFT_FUSE_SSH_PORT} -u admin -p ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD} "wait-for-service io.fabric8.boot.commands.service.JoinAvailable"
     ${FUSE_BIN_DIR}/client -h ${OPENSHIFT_FUSE_IP} -a ${OPENSHIFT_FUSE_SSH_PORT} -u admin -p ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD} "fabric:join -f -b ${OPENSHIFT_FUSE_IP} --zookeeper-password ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD} ${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
     client_result "WARNING: Creating fabric containers directly from"
     client_result "         openshift is supported in a limited way"
