--- a/bin/install
+++ b/bin/install
@@ -208,6 +208,8 @@ if $join; then
     client_result "         as such containers can not be fully managed"
     client_result "         by fabric."
 else
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_IP=${OPENSHIFT_FUSE_IP}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PORT}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_PASSWORD=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
 fi
