--- a/bin/install
+++ b/bin/install
@@ -28,10 +28,10 @@ function wait_for_start() {
            fi
      done
      if ps -p $PID > /dev/null; then
-       if [ $1 == "wait-for-fabric"] ; then
+       if [ "$1" == "wait-for-fabric" ] ; then
          retries=18
          fabric_loaded=0
-         while [ ! $fabric_loaded && $retries -gt 0 ]; do
+         while [ $retries -gt 0 ]; do
             curl -s http://admin:${OPENSHIFT_FUSE_PASSWORD}@$OPENSHIFT_FUSE_IP:8080/jolokia/read/io.fabric8:type=Fabric/CurrentContainerName | grep '"status":200' > /dev/null
             [ $? -eq 0 ] && fabric_loaded=1 && break
             let retries=$retries-1
