More fixes for BZ 1124700

--- a/bin/install
+++ b/bin/install
@@ -32,12 +32,11 @@ function wait_for_start() {
          retries=18
          fabric_loaded=0
          while [ $retries -gt 0 ]; do
-            curl -s http://admin:${OPENSHIFT_FUSE_PASSWORD}@$OPENSHIFT_FUSE_IP:8080/jolokia/read/io.fabric8:type=Fabric/CurrentContainerName | grep '"status":200' > /dev/null
-            [ $? -eq 0 ] && fabric_loaded=1 && break
+            result=`curl -s http://admin:${OPENSHIFT_FUSE_PASSWORD}@$OPENSHIFT_FUSE_IP:8080/jolokia/read/io.fabric8:type=Fabric/CurrentContainerName || :`
+            ( echo $result | grep '"status":200' > /dev/null ) && fabric_loaded=1 && break
             let retries=$retries-1
             sleep 5
-         done
-         if [ $fabric_loaded -eq 1 ]; then
+         done         if [ $fabric_loaded -eq 1 ]; then
            client_result "${OPENSHIFT_APP_NAME} ($PID) is started successfully"
          else
            client_error "Command Failed: Could not reach ${OPENSHIFT_APP_NAME} console."
