--- a/bin/install
+++ b/bin/install
@@ -36,7 +36,8 @@ function wait_for_start() {
             ( echo $result | grep '"status":200' > /dev/null ) && fabric_loaded=1 && break
             let retries=$retries-1
             sleep 5
-         done         if [ $fabric_loaded -eq 1 ]; then
+         done         
+         if [ $fabric_loaded -eq 1 ]; then
            client_result "${OPENSHIFT_APP_NAME} ($PID) is started successfully"
          else
            client_error "Command Failed: Could not reach ${OPENSHIFT_APP_NAME} console."
