--- a/bin/install
+++ b/bin/install
@@ -227,6 +227,7 @@ if $join; then
     client_result "         by fabric."
 else
     wait_for_start 'wait-for-fabric'
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_GEAR_DNS}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_IP=${OPENSHIFT_FUSE_IP}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PORT}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
