--- a/bin/install
+++ b/bin/install
@@ -138,6 +138,9 @@ echo "karaf.shutdown.port=${OPENSHIFT_FUSE_SHUTDOWN_PORT}" >> container/etc/conf
 echo "felix.threading.timeout=0" >> container/etc/config.properties
 
 # Retrieve password
+if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD:-}" ]; then
+    OPENSHIFT_FUSE_PASSWORD="${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+fi
 if [ ! -z "${OPENSHIFT_FUSE_PASSWORD:-}" ]; then
     if [ ${#OPENSHIFT_FUSE_PASSWORD} -gt 5 ]; then
       client_result "Using provided password from cartridge"
