--- a/bin/install
+++ b/bin/install
@@ -38,13 +38,13 @@ function wait_for_start() {
             sleep 5
          done         
          if [ $fabric_loaded -eq 1 ]; then
-           client_result "${OPENSHIFT_APP_NAME} ($PID) is started successfully"
+           client_result ""
          else
            client_error "Command Failed: Could not reach ${OPENSHIFT_APP_NAME} console."
            exit 1
          fi
        else
-         client_result "${OPENSHIFT_APP_NAME} ($PID) is started successfully"
+         client_result ""
        fi
      else
        client_error "Command Failed: ${OPENSHIFT_APP_NAME} ($PID) is not running"
@@ -174,17 +174,22 @@ join=false
 if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_URL:-}" ]; then
     client_result "Using provided url from cartridge"
     echo "zookeeper.url=$OPENSHIFT_FUSE_ZOOKEEPER_URL" >> $FUSE_SYSPROPS_FILE
+    
+    OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_GEAR_DNS}
+    OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PROXY_PORT}
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"    
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
+    
 elif  [ ! -z "${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL:-}" ]; then
     client_result "Using provided url from domain"
     export OPENSHIFT_FUSE_ZOOKEEPER_URL=${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL}
     set_env_var OPENSHIFT_FUSE_ZOOKEEPER_URL "${OPENSHIFT_FUSE_ZOOKEEPER_URL}" env
     join=true
-# Turn into a fabric root container
 else
     # Additional system properties
     client_result "Configuring zookeeper server"
-    export OPENSHIFT_FUSE_DOMAIN_CONSOLE_URL="https://${OPENSHIFT_GEAR_DNS}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_CONSOLE_URL=${OPENSHIFT_FUSE_DOMAIN_CONSOLE_URL}"
     export OPENSHIFT_FUSE_ZOOKEEPER_URL=${OPENSHIFT_GEAR_DNS}:${OPENSHIFT_FUSE_ZOOKEEPER_PROXY_PORT}
     set_env_var OPENSHIFT_FUSE_ZOOKEEPER_URL "${OPENSHIFT_FUSE_ZOOKEEPER_URL}" env
     replace_property_value ensemble.auto.start true $FUSE_SYSPROPS_FILE
@@ -197,23 +202,32 @@ else
     keytool -genkey -storetype JKS -storepass "${OPENSHIFT_FUSE_PASSWORD}" -keystore "${FUSE_KEYSTORE_FILE}" -keypass "${OPENSHIFT_FUSE_PASSWORD}" -alias "${OPENSHIFT_GEAR_DNS}" -keyalg RSA -keysize 4096 -dname "cn=${OPENSHIFT_GEAR_DNS}" -validity 3650
     keytool -exportcert -keystore "${FUSE_KEYSTORE_FILE}" -alias ${OPENSHIFT_GEAR_DNS} -storepass "${OPENSHIFT_FUSE_PASSWORD}" --rfc > "${FUSE_CERT_FILE}"
     FUSE_CERT=`cat "${FUSE_CERT_FILE}"`
+    
+    OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_GEAR_DNS}
+    OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PROXY_PORT}
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
 fi
+
+OPENSHIFT_FUSE_CONSOLE_URL="https://${OPENSHIFT_FUSE_DOMAIN_DNS}"
 
 client_result ""
 client_result "Application ${OPENSHIFT_APP_NAME} created successfully.  Please make note of these credentials:"
 client_result ""
-client_result "   Console URL:        ${OPENSHIFT_FUSE_DOMAIN_CONSOLE_URL}"
+client_result "   Console URL:        ${OPENSHIFT_FUSE_CONSOLE_URL}"
 client_result "   Console User:       admin"
 client_result "   Console Password:   ${OPENSHIFT_FUSE_PASSWORD}"
 client_result "   Zookeeper URL:      ${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
 client_result "   Zookeeper Password: ${OPENSHIFT_FUSE_PASSWORD}"
 if [ ! -z "${FUSE_CERT_FILE:-}" ]; then
-  client_result "   SSL Certificate URL: https://${OPENSHIFT_APP_DNS}/hawtio/index.html#/wiki/branch/1.0/view/fabric/profiles/default.profile/keystore.cert"
+  client_result "   SSL Certificate URL: ${OPENSHIFT_FUSE_CONSOLE_URL}/hawtio/index.html#/wiki/branch/1.0/view/fabric/profiles/default.profile/keystore.cert"
 fi
 
 if ! $join; then
 client_result ""
-client_result "   The management console will be available shortly at: ${OPENSHIFT_FUSE_DOMAIN_CONSOLE_URL}"
+client_result "   The management console will be available shortly at: ${OPENSHIFT_FUSE_CONSOLE_URL}"
 client_result ""
 fi
 
@@ -238,8 +252,4 @@ if $join; then
     client_result "         by fabric."
 else
     wait_for_start 'wait-for-fabric'
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_GEAR_DNS}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PROXY_PORT}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"
 fi
