--- a/bin/install
+++ b/bin/install
@@ -174,13 +174,16 @@ join=false
 if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_URL:-}" ]; then
     client_result "Using provided url from cartridge"
     echo "zookeeper.url=$OPENSHIFT_FUSE_ZOOKEEPER_URL" >> $FUSE_SYSPROPS_FILE
-    
-    OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_EXTERNAL_DNS}
-    OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_EXTERNAL_SSH_PORT}
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"    
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
-    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
+
+    # are we the first gear created against an external fuse zk server.
+    if [ -z "${OPENSHIFT_FUSE_DOMAIN_DNS:-}" ]; then 
+      OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_EXTERNAL_DNS}
+      OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_EXTERNAL_SSH_PORT}
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"    
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
+    fi 
     
 elif  [ ! -z "${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL:-}" ]; then
     client_result "Using provided url from domain"
