--- a/bin/install
+++ b/bin/install
@@ -166,7 +166,10 @@ echo "zookeeper.password=${OPENSHIFT_FUSE_PASSWORD}" >> $FUSE_SYSPROPS_FILE
 
 
 # Trust even self signed certs since OS gives us a self signed cert.
-# echo "javax.net.ssl.trustAll=true" >> $FUSE_SYSPROPS_FILE
+echo "javax.net.ssl.trustAll=true" >> $FUSE_SYSPROPS_FILE
+# Enable the openshift port mapper
+echo "org.fusesource.common.util.PublicPortMapper=openshift" >> $FUSE_SYSPROPS_FILE
+
 FUSE_CERT=""
 
 # Configure to join an existing fabric
