Use container etc dir

--- a/bin/install
+++ b/bin/install
@@ -140,9 +140,9 @@ echo "karaf.shutdown.port=${OPENSHIFT_FUSE_SHUTDOWN_PORT}" >> container/etc/conf
 echo "felix.threading.timeout=0" >> container/etc/config.properties
 
 # reduce transient bundles loaded on start before fabric is created
-cat etc/org.apache.karaf.features.cfg | sed 's/featuresBoot.*/featuresBoot=jasypt-encryption,config,management,fabric/' > etc/org.apache.karaf.features.cfg.mod || :
-cp etc/org.apache.karaf.features.cfg.mod etc/org.apache.karaf.features.cfg || :
-rm etc/org.apache.karaf.features.cfg.mod || :
+cat container/etc/org.apache.karaf.features.cfg | sed 's/featuresBoot.*/featuresBoot=jasypt-encryption,config,management,fabric/' > container/etc/org.apache.karaf.features.cfg.mod || :
+cp container/etc/org.apache.karaf.features.cfg.mod container/etc/org.apache.karaf.features.cfg || :
+rm container/etc/org.apache.karaf.features.cfg.mod || :
 
 # Retrieve password
 if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD:-}" ]; then
