ENTESB-2008 - use each apps log dir not ensemble servers log dir

--- a/bin/install
+++ b/bin/install
@@ -139,6 +139,8 @@ echo "karaf.shutdown.port=${OPENSHIFT_FUSE_SHUTDOWN_PORT}" >> container/etc/conf
 # Limit the maximum number of created threads
 echo "felix.threading.timeout=0" >> container/etc/config.properties
 
+echo "karaf.log.dir=${OPENSHIFT_FUSE_LOG_DIR}" >> container/etc/system.properties
+
 # reduce transient bundles loaded on start before fabric is created
 cat container/etc/org.apache.karaf.features.cfg | sed 's/featuresBoot.*/featuresBoot=jasypt-encryption,config,management,fabric/' > container/etc/org.apache.karaf.features.cfg.mod || :
 cp container/etc/org.apache.karaf.features.cfg.mod container/etc/org.apache.karaf.features.cfg || :
