part of fix for ENTESB-2043: Jolokia port is hardocoded fro Fuse Builder cartirdge

--- a/bin/install
+++ b/bin/install
@@ -191,8 +191,13 @@ if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_URL:-}" ]; then
     if [ -z "${OPENSHIFT_FUSE_DOMAIN_DNS:-}" ]; then 
       OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_EXTERNAL_DNS}
       OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_EXTERNAL_SSH_PORT}
+      OPENSHIFT_FUSE_DOMAIN_HTTP_PORT=${OPENSHIFT_FUSE_EXTERNAL_HTTP_PORT}
+      if [ -z "${OPENSHIFT_FUSE_DOMAIN_HTTP_PORT:-}" ]; then
+        OPENSHIFT_FUSE_DOMAIN_HTTP_PORT=8181
+      fi
       add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
-      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"    
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"
+      add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_HTTP_PORT=${OPENSHIFT_FUSE_DOMAIN_HTTP_PORT}"
       add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
       add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
     fi 
@@ -220,8 +225,10 @@ else
     
     OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_GEAR_DNS}
     OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_SSH_PROXY_PORT}
+    OPENSHIFT_FUSE_DOMAIN_HTTP_PORT=80
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_DNS=${OPENSHIFT_FUSE_DOMAIN_DNS}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_SSH_PORT=${OPENSHIFT_FUSE_DOMAIN_SSH_PORT}"
+    add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_HTTP_PORT=${OPENSHIFT_FUSE_DOMAIN_HTTP_PORT}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
     add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_PASSWORD=${OPENSHIFT_FUSE_PASSWORD}"    
 fi
