Part of fix for ENTESB-2043: Jolokia port is hardcoded for Fuse Builder cart

--- a/bin/install
+++ b/bin/install
@@ -8,3 +8,7 @@ if [ -z "${OPENSHIFT_FUSE_DOMAIN_PASSWORD:-}" ]; then
   client_error "Command Failed: OPENSHIFT_FUSE_DOMAIN_PASSWORD not set."
   exit 1
 fi
+if [ -z "${OPENSHIFT_FUSE_DOMAIN_HTTP_PORT:-}" ]; then
+  client_error "Command Failed: OPENSHIFT_FUSE_DOMAIN_HTTP_PORT not set."
+  exit 1
+fi
