ENTESB-2755 - don't try restart if we are doing a first time install

--- a/bin/install
+++ b/bin/install
@@ -315,3 +315,6 @@ if $join; then
 else
     wait_for_start 'wait-for-fabric'
 fi
+
+# apply any patches we have in patches dir to the booted GA distro
+${OPENSHIFT_FUSE_DIR}/bin/upgrade 0 0 0 1
